--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,8 +4,8 @@ import ThemeSwitcher from "~/components/theme-switcher.astro";
 import type { NavItem } from "~/types";
 
 const navItems: Array<NavItem> = [
-  { title: "Features", url: "#features" },
-  { title: "Compatibility", url: "#compatibility" },
+  { title: "¿Quiénes somos?", url: "#features" },
+  { title: "Herramientas", url: "#compatibility" },
   { title: "Showcase", url: "#showcase" },
 ];
 ---
