--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,10 +20,10 @@ const description =
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="../../src/assets/astronaut.png"  />
     <meta name="generator" content={generator} />
 
-    <title>Astro Landing Page</title>
+    <title>Sigecoin</title>
     <meta name="description" content={description} />
 
     <!-- social media -->
