--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,14 +3,15 @@ import { Icon } from "astro-icon";
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="Just ship less" id="intro">
+<ContentSection title="Sigecoin" id="intro">
   <Icon slot="eyebrow" name="logomark" class="h-32" />
   <Fragment slot="lead">
-    Sisgecoin is a new kind of site builder for the
-    <span class="text-primary">modern</span> web.
-    <span class="text-primary">Lightning-fast</span>
-     performance meets <span class="text-primary">powerful</span> developer
-    experience.
+    Tiene como misión facilitar el trabajo de los empresarios y los 
+    contadores, brindándoles una herramienta <span class="text-primary">fácil de usar, segura
+      y eficiente</span>, que les permita llevar la <span class="text-primary">contabilidad </span> 
+     de su negocio, generar reportes financieros, facturar
+      electrónicamente, gestionar el stock de sus productos
+       y optimizar sus procesos. 
   </Fragment>
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
     <a
