--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -17,7 +17,7 @@ const navItems: Array<NavItem> = [
   <a class="flex items-center gap-3 hover:!text-default" href="#">
     <h1 class="sr-only">Sigecoin</h1>
     <Icon name="logomark" class="h-10" />
-    <Icon name="wordmark" class="hidden h-4 sm:block" />
+    <h1>Sigecoin</h1>
   </a>
   <div>
     <div class="flex items-center gap-6">
