--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -1,79 +1,46 @@
 ---
-import { Icon } from "astro-icon";
-import ContentSection from "~/components/content-section.astro";
-import type { FeatureItem } from "~/types";
+
+import { Image } from "@astrojs/image/components";
 import { authors } from "../content/authors";
 
-//import { Image } from 'astro:assets';
-const features: Array<FeatureItem> = [
-  {
-    title: "Jose Luis Ramirez Gomez",
-    description:
-      "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
-    icon: "",
-  },
-  {
-    title: "100% Static HTML, No JS",
-    description:
-      "Astro renders your entire page to static HTML, removing all JavaScript from your final build by default.",
-    icon: "mdi:feather",
-  },
-  {
-    title: "On-Demand Components",
-    description:
-      "Need some JS? Astro can automatically hydrate interactive components when they become visible on the page. If the user never sees it, they never load it.",
-    icon: "mdi:directions-fork",
-  },
-  {
-    title: "Broad Integration",
-    description:
-      "Astro supports TypeScript, Scoped CSS, CSS Modules, Sass, Tailwind, Markdown, MDX, and any of your favorite npm packages.",
-    icon: "mdi:graph",
-  },
-  {
-    title: "SEO Enabled",
-    description:
-      "Automatic sitemaps, RSS feeds, pagination and collections take the pain out of SEO and syndication.",
-    icon: "mdi:search-web",
-  },
-  {
-    title: "Community",
-    description:
-      "Astro is an open source project powered by hundreds of contributors making thousands of individual contributions.",
-    icon: "mdi:account-group",
-  },
-];
 ---
 
-<ContentSection title="¿Quienes somos?" id="features">
-  <Fragment slot="lead">
-    Sisgecoin es una empresa de software que ofrece soluciones integrales para la <span class="text-primary">gestión contable</span> 
-    y el control de <span class="text-primary">inventario</span> de las pequeñas y medianas empresas.
+    <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
+      {
+        authors.slice(0, 5).map((item) => (
+          <div class="group">
+            <div class="w-full aspect-square">
+              <Image
+                src={item.image}
+                format="avif"
+                width={580}
+                height={580}
+                alt="Team"
+                class="w-full h-full object-cover rounded transition  group-hover:-translate-y-1 group-hover:shadow-xl"
+              />
+            </div>
 
-  </Fragment>
-  <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
-    {
-      authors.slice(0, 3).map((item) => (
-        <div class="group">
-          <div class="w-full aspect-square">
-            <Image
-              src={item.image}
-              format="avif"
-              width={580}
-              height={580}
-              alt="Team"
-              class="w-full h-full object-cover rounded transition  group-hover:-translate-y-1 group-hover:shadow-xl"
-            />
+            <div class="mt-4 text-center">
+              <h3 class="text-sm text-gray-500 dark:text-gray-300">
+                {" "}
+                {item.name}
+              </h3>
+              <h2 class="text-sm text-gray-500 dark:text-gray-300">{" "}
+                {item.bio}</h2>
+            </div>
+            <a href={`${item.git}`} target="_blank" rel="noopener noreferrer">github</a>
           </div>
+        ))
+      }
+    </div>
 
-          <div class="mt-4 text-center">
-            <h3 class="text-sm text-gray-500 dark:text-gray-300">
-              {" "}
-              {item.name}
-            </h3>
-          </div>
-        </div>
-      ))
-    }
-  </div>
-</ContentSection>
+    <div class="mx-auto max-w-xl text-center mt-14">
+      <p class="text-lg leading-relaxed text-gray-600 dark:text-gray-400">
+        We're a multi-cultural team from around the world! We come from diverse
+        backgrounds, bringing different personalities, experiences and skills to
+        the job. This is what makes our team so special.
+      </p>
+     
+    </div>
+  </Container>
+</Layout>
