--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -6,7 +6,7 @@ import type { NavItem } from "~/types";
 const navItems: Array<NavItem> = [
   { title: "¿Quiénes somos?", url: "#features" },
   { title: "Herramientas", url: "#compatibility" },
-  { title: "Showcase", url: "#showcase" },
+  { title: "Productos", url: "#showcase" },
 ];
 ---
 
