--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -1,7 +1,7 @@
 ---
 
 import { Image } from "@astrojs/image/components";
-import { authors } from "../content/authors";
+import { authors } from "../content/_authors";
 import ContentSection from "~/components/content-section.astro";
 ---
 <ContentSection title="¿Quienes somos?" id="features">
