--- a/src/components/compatibility.astro
+++ b/src/components/compatibility.astro
@@ -14,6 +14,12 @@ const frameworks: Array<CompatibilityItem> = [
     icon: "frameworks/vue",
     url: "https://vuejs.org/",
   },
+  {
+    title: "Node.js",
+    icon: "mdi:nodejs",
+    url: "https://vuejs.org/",
+  },
+ 
 ];
 
 const platforms: Array<CompatibilityItem> = [
