add links of docs

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -6,7 +6,7 @@ import ContentSection from "~/components/content-section.astro";
 ---
 <ContentSection title="¿Quienes somos?" id="features">
   <Fragment slot="lead">
-    Sisgecoin es una empresa de software que ofrece soluciones integrales para la <span class="text-primary">gestión contable</span> 
+    Sigecoin es un software que ofrece soluciones integrales para la <span class="text-primary">gestión contable</span> 
     y el control de <span class="text-primary">inventario</span> de las pequeñas y medianas empresas.
     
     <h2
