--- a/src/components/github-corner.astro
+++ b/src/components/github-corner.astro
@@ -1,9 +1,9 @@
 <!-- https://github.com/tholman/github-corners -->
 <a
-  href="https://github.com/mhyfritz/astro-landing-page"
+  href="https://github.com/DIOME09/SIGECOIN-PROYECT.git"
   aria-label="View source on GitHub"
   class="absolute right-0 top-0 z-10 text-black hover:text-black focus:ring-0 focus:ring-offset-0"
-  ><svg
+  target="_blank" ><svg
     class="fill-white"
     width="80"
     height="80"
