--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -5,37 +5,29 @@ import ContentSection from "~/components/content-section.astro";
 
 <ContentSection title="Sigecoin" id="intro">
   <Icon slot="eyebrow" name="logomark" class="h-32" />
-  <h2
-      class="gradient-text text-center font-extrabold tracking-tight text-6xl"
-    > misión</h2>
+  
   <p class="text-center font-extrabold tracking-tight text-2xl">
     Tiene como misión facilitar el trabajo de los empresarios y los 
     contadores, brindándoles una herramienta <span class="text-primary">fácil de usar, segura
       y eficiente</span>, que les permita llevar la <span class="text-primary">contabilidad </span> 
      de su negocio, generar reportes financieros, facturar
       electrónicamente, gestionar el stock de sus productos
-       y optimizar sus procesos. 
+       y optimizar sus procesos ofreciendo un producto de calidad, innovador y adaptado a las 
+       necesidades de cada cliente. 
   </p>
-  <h2
-      class="gradient-text text-center font-extrabold tracking-tight text-6xl"
-    > visión</h2>
-  <p class="text-center font-extrabold tracking-tight text-2xl">
-    Tiene como visión ser la empresa líder en el mercado latinoamericano de software 
-    contable e inventario, ofreciendo un producto de calidad, innovador y adaptado a las 
-    necesidades de cada cliente.</p>
   
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
     
     <a
-      href="https://docs.astro.build/"
-      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
+      href="https://drive.google.com/file/d/1ztwBL5qyNw81nAObd5NP9E9a3ZebZiFs/view?usp=drive_link"
+     class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4" target="_blank"
     >
       <Icon pack="mdi" name="telescope" class="h-8" />
       <span>Read the docs</span>
     </a>
     <a
-      href="https://astro.new/"
-      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
+      href="https://github.com/DIOME09/SIGECOIN-PROYECT.git"
+      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4" target="_blank"
     >
       <Icon pack="mdi" name="rocket" class="h-8" />
       <span>Try it out</span>
