--- a/src/components/compatibility.astro
+++ b/src/components/compatibility.astro
@@ -17,9 +17,13 @@ const frameworks: Array<CompatibilityItem> = [
   {
     title: "Node.js",
     icon: "mdi:nodejs",
-    url: "https://vuejs.org/",
+    url: "https://nodejs.org/es/docs",
   },
- 
+  {
+    title: "MongoDB",
+    icon: "frameworks/mongodb",
+    url: "https://www.mongodb.com/es",
+  }
 ];
 
 const platforms: Array<CompatibilityItem> = [
