--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -22,11 +22,12 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     >
       <Icon name="logomark" class="h-24 text-white md:h-32" />
       <div
-        class="gradient-text text-center font-extrabold tracking-tighter text-6xl"
+        class="gradient-text text-center font-extrabold tracking-tighter text-8xl"
       >
-        Sistema de gestion 
-        <br />contable e
-        <br /> inventario.
+        Sigecoin
+        <p style="font-size: 30px; color: white; letter-spacing: 1px; font-weight: normal; margin-top: 25px;">Sistema de gestion 
+          <br />contable e
+          <br /> inventario.</p>
       </div>
     </h2>
     <div
